Fix 'Connection between activity and pin does not ends on pin'.

FIXED-IN:2.21.80 (KDE Applications 17.03.80)
BUG:373308